# RakClient

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.ru.md
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/navmesh-recast/: Cargo.toml  build.rs
crates/navmesh-recast/src/: lib.rs  rerecast_backend.rs  tiled.rs
crates/navmesh-recast/wrapper/: recast_wrapper.cpp  recast_wrapper.h
crates/raknet/: Cargo.toml
crates/raknet/src/: auth_table.rs  lib.rs  pcap.rs  reliability.rs  socks5.rs  tables.rs  transport.rs  wire.rs
crates/raknet/src/reliability/: tests.rs
crates/raknet/tests/: mlpcap_framing.rs
crates/sa-map/: Cargo.toml
crates/sa-map/src/: col.rs  dff.rs  ide.rs  img.rs  ipl.rs  lib.rs  load.rs  scene.rs  world.rs
crates/sa-nav/: Cargo.toml
crates/sa-nav/src/: lib.rs  path.rs
crates/sa-viewer/: Cargo.toml
crates/sa-viewer/src/: main.rs
crates/samp-client/: Cargo.toml
crates/samp-client/src/: aim.rs  client_emulation.rs  codec.rs  driver.rs  lib.rs  registry.rs  state.rs  transport.rs  type3.rs
crates/samp-client/src/driver/: tests.rs
crates/samp-client/src/registry/: tests.rs
crates/samp-proto/: Cargo.toml
crates/samp-proto/src/: bitstream.rs  codec.rs  encoded.rs  fields.rs  ids.rs  lib.rs  rwbitstream.rs  sync.rs  weapon.rs
crates/samp-proto/src/codec/: tests.rs
crates/samp-proto/src/events/: dispatch_tests.rs  incoming_rpc.rs  incoming_rpc_b.rs  incoming_rpc_c.rs  mod.rs  outgoing_rpc.rs
crates/samp-proto/src/events/incoming/: actor.rs  camera.rs  mod.rs  object.rs  player.rs  session.rs  ui.rs  vehicle.rs  world.rs
crates/samp-script/: Cargo.toml
crates/samp-script/luau/: .luaurc  addon.luau  arizona.luau  fly.luau  host.d.luau  packet.luau  sampfuncs.luau  vector3d.luau
crates/samp-script/luau/arizona/: type3.luau
crates/samp-script/luau/samp/: events.luau  raknet.luau
crates/samp-script/luau/samp/events/: bitstream_io.luau  core.luau  extra_types.luau  handlers.luau  utils.luau
crates/samp-script/src/: bindings.rs  bitstream.rs  crypto.rs  lib.rs  require.rs  tests.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs  server.rs  wire.rs
docs/memory/sa-nav/: lib.md  navgen.md  path.md
docs/memory/samp-client/: aim.md  client_emulation.md  driver.md  lib.md  registry.md  state.md
docs/memory/samp-proto/: bitstream.md  codec.md  encoded.md  lib.md  rwbitstream.md  sync.md
example_scripts/: arizona_launcher_emulation.luau  arizona_launcher_emulation_classic.luau  arizona_login.luau  chat_echo.luau  new_launcher_emulation.luau  pathfinder_patrol.luau
scripts/: check.ps1
tools/moonloader/: rpc_capture_pcap.lua
