[workspace]
resolver = "2"
members = [
    "crates/samp-proto",
    "crates/raknet",
    "crates/samp-client",
    "crates/samp-script",
    "crates/app",
    "crates/test-support",
    "crates/sa-map",
    "crates/sa-nav",
    "crates/navmesh-recast",
]

# Shared dependency versions. Member crates opt in with `dep.workspace = true`.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
tokio-util = "0.7"
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.1"
sha2 = "0.11.0"
hmac = "0.13.0"
strum = { version = "0.28.0", features = ["derive"] }
num_enum = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }

# Internal crates (path deps).
samp-proto = { path = "crates/samp-proto" }
raknet = { path = "crates/raknet" }
samp-client = { path = "crates/samp-client" }
samp-script = { path = "crates/samp-script" }
test-support = { path = "crates/test-support" }
sa-map = { path = "crates/sa-map" }
sa-nav = { path = "crates/sa-nav" }
navmesh-recast = { path = "crates/navmesh-recast" }

[profile.release]
lto = "thin"

# The navmesh-recast fork calls a patched rerecast (extra deck_climb params) — the
# same vendored fork its home workspace patches in. Machine-local path, like the
# navmesh-recast dep itself.
[patch.crates-io]
rerecast = { path = "C:/Users/Newmcpeishka/Desktop/Projects/rerecast" }
