[package]
name = "app"
version = "0.2.0"
edition = "2021"
description = "RakClient binary: a full-featured headless SA-MP 0.3.7 client (no GTA, no rendering) — connects, logs in, spawns, syncs on-foot state, moves, and chats; scriptable via Lua/Luau."

[[bin]]
name = "rakclient"
path = "src/main.rs"

[dependencies]
samp-client = { workspace = true }
samp-proto = { workspace = true }
raknet = { workspace = true }
samp-script = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync", "io-std", "io-util"] }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
