# Standalone crate: its own [workspace] keeps the heavy Bevy dependency out of the main RakClient
# workspace build and gate. Run with:  cargo run --release --manifest-path crates/sa-viewer/Cargo.toml
[package]
name = "sa-viewer"
version = "0.1.0"
edition = "2021"
description = "Bevy flythrough of the parsed GTA SA collision geometry (sa-map)."

[dependencies]
sa-map = { path = "../sa-map" }
bevy = "0.15"

[workspace]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
