# Standalone crate: its own [workspace] keeps the heavy Bevy dependency out of the main RakClient
# workspace build and gate. Run with:  cargo run --release --manifest-path crates/sa-viewer/Cargo.toml
[package]
name = "sa-viewer"
version = "0.1.0"
edition = "2021"
description = "Bevy flythrough of the parsed GTA SA collision geometry (sa-map)."

[dependencies]
sa-map = { path = "../sa-map" }
sa-nav = { path = "../sa-nav" }
bevy = "0.15"

[workspace]

# NOTE: sa-viewer depends on sa-nav WITHOUT its `build` feature, so navmesh-recast
# (and thus the forked rerecast) never enters the graph — no [patch.crates-io] here.
# Only navgen (the `build` feature) needs the fork, and it lives in the root workspace.

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
